--- a/src/Sidebar.css
+++ b/src/Sidebar.css
@@ -1,3 +1,18 @@
+.sidebar{
+   border-right: 1px solid var(--twitter-background);
+   flex:0.3;
+   /*min-width: 250px;*/
+   margin-top: 20px;
+   padding-left: 20px;
+   padding-right: 20px;
+}
+
+.sidebar__icon{
+   color: var(--twitter-color);
+   font-size: 30px !important;
+   padding: 20px;
+
+}
 .sidebar__tweet{
 
      /*!important tag is there to override the default colour of the button set by mui*/
