--- a/src/TweetBox.css
+++ b/src/TweetBox.css
@@ -1,3 +1,14 @@
 .tweetBox{
     padding-bottom: 10px;
+    border-bottom: 8px solid var(--twitter-background);
+    padding-right: 10px;
+}
+.tweetBox > form{
+    display: flex;
+    flex-direction: column;
+}
+
+.tweetBox__input{
+    display: flex;
+    padding: 20px;
 }
