--- a/src/TweetBox.css
+++ b/src/TweetBox.css
@@ -8,7 +8,29 @@
     flex-direction: column;
 }
 
+.tweetBox__button{
+    background-color: var(--twitter-color) !important;
+    border: none !important;
+    color: white !important;
+    font-weight: bold !important;
+    border-radius: 30px !important;
+    height: 40px !important;
+    margin-top: 20px !important;
+    text-transform: inherit !important;
+   
+    width: 100px;
+    margin-left: auto !important;
+    
+}
+
 .tweetBox__input{
     display: flex;
     padding: 20px;
+}
+
+.tweetBox__input > input{
+    flex:1;
+    margin-left: 20px;
+    font-size: 20px;
+    border:none;
 }
