tweetbox styling finish for now

--- a/src/TweetBox.css
+++ b/src/TweetBox.css
@@ -8,6 +8,11 @@
     flex-direction: column;
 }
 
+.tweetBox__imageInput{
+    border: none;
+    padding: 10px;
+}
+
 .tweetBox__button{
     background-color: var(--twitter-color) !important;
     border: none !important;
